--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:          # List of stages for jobs, and their order of execution
 pypi:
     stage: deploy
     script:
+        - apk add build-base libffi-dev python-dev
         - pip install twine
         - python setup.py sdist
         - twine upload dist/*
